@@ -5,10 +5,8 @@
 [ -z "$builddir" ] && export builddir=$PWD
 [ -z "$top_builddir" ] && export top_builddir=$builddir/../..
 
-cmdfile=${top_builddir}/test/data/settrace.cmd
+cmdfile=${top_srcdir}/test/data/settrace.cmd
 
 debugged_script="${top_srcdir}/test/example/settrace.sh"
-[[ ! -r $debugged_script ]] && \
-    debugged_script="${top_builddir}/test/example/setrace.sh"
 
 $SH $debugged_script $top_builddir $cmdfile
