@@ -5,7 +5,7 @@ t=${0##*/}; TEST_NAME=${t:5}   # basename $0 with 'test-' stripped off
 
 . ${builddir}/check-common.sh
 
-debugged_script="$top_builddir/test/example/dbg-test2.sh"
+debugged_script="$top_srcdir/test/example/dbg-test2.sh"
 
 (cd $srcdir && run_debugger $debugged_script 2>&1 >$TEST_FILE </dev/null)
 
