@@ -8,4 +8,4 @@ debugged_script="${top_srcdir}/test/example/$hanoi.sh"
 [[ ! -r $debugged_script ]] && \
     debugged_script="${top_builddir}/test/example/hanoi.sh"
 
-$SH ${top_builddir}/bashdb -B -q -L $top_builddir -X $debugged_script
+$SH ${top_builddir}/bashdb -B -q -L $top_srcdir -X $debugged_script
